--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
             color: white;
             position: relative;
         }
-        
-        img {
+
+        iframe {
             width: 300px;
+            height: 300px;
             border-radius: 10px;
-            margin-bottom: 20px;
+            border: none;
         }
     </style>
 </head>
@@ -50,8 +51,8 @@
 
     <h1>Will you say Yes?</h1>
 
-    <!-- Add the image -->
-    <div style="width:100%;height:0;padding-bottom:138%;position:relative;"><iframe src="https://giphy.com/embed/UuKevjxS75vbLjiHsV" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/stickers/WIMASU-sports-badminton-wimasu-UuKevjxS75vbLjiHsV">via GIPHY</a></p>
+    <!-- Embed the GIF using iframe -->
+    <iframe src="https://giphy.com/embed/UuKevjxS75vbLjiHsV" allowFullScreen></iframe>
     
     <div class="buttons">
         <button id="yes" onclick="alert('Yay! You said Yes!')">Yes</button>
