--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 </head>
 <body>
 
-    <h1>Will You Say Yes?</h1>
+    <h1>Badminton Someday?</h1>
 
     <!-- Embed the GIF -->
     <div class="gif-container">
