--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             border: none;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease;
+            pointer-events: none; /* Disable clicks on the GIF */
         }
 
         iframe:hover {
@@ -114,7 +115,7 @@
 </head>
 <body>
 
-    <h1>BADMINTON?</h1>
+    <h1>Badminton?</h1>
 
     <!-- Embed the GIF -->
     <div class="gif-container">
