--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun Yes or No Page</title>
     <style>
-        /* Add a gradient background for a cool visual effect */
+        /* Add a light blue gradient background for a fresh look */
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
@@ -15,7 +15,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(135deg, #f78ca0, #f9748f, #fd868c, #fe9a8b);
+            background: linear-gradient(135deg, #c9eaff, #c1e8ff, #b6e2ff, #aadfff);
             background-size: 300% 300%;
             animation: gradientBG 10s ease infinite;
             overflow: hidden;  /* Prevent page scrolling */
@@ -29,16 +29,17 @@
         }
 
         h1 {
-            color: white;
+            color: #333;
             font-size: 48px;
             margin-bottom: 40px;
-            text-shadow: 2px 4px rgba(0, 0, 0, 0.3);
+            text-shadow: 2px 4px rgba(0, 0, 0, 0.1);
             letter-spacing: 2px;
         }
 
         .buttons {
-            margin-top: 50px;
+            margin-top: 30px;
             display: flex;
+            gap: 20px; /* Add space between the buttons */
             justify-content: center;
         }
 
@@ -48,7 +49,6 @@
             cursor: pointer;
             border: none;
             border-radius: 50px;
-            margin: 0 20px;
             transition: all 0.3s ease;
             box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
         }
@@ -60,22 +60,18 @@
         }
 
         #yes {
-            background-color: #6DD5FA;
+            background-color: #87cefa;
             color: white;
             transition: all 0.4s ease;
         }
 
         #yes:hover {
-            background-color: #3498DB;
+            background-color: #70b8e6;
         }
 
         #no {
             background-color: #f44336;
             color: white;
-            position: absolute; /* Allow the "No" button to move */
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             transition: background-color 0.3s ease;
         }
 
@@ -87,7 +83,7 @@
         .gif-container {
             display: flex;
             justify-content: center;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
         }
 
         iframe {
@@ -155,6 +151,7 @@
                 newTop + buttonHeight > gifRect.top && newTop < gifRect.bottom   // Vertical overlap
             );
 
+            noButton.style.position = 'absolute'; /* Make sure the button moves freely */
             noButton.style.left = newLeft + 'px';
             noButton.style.top = newTop + 'px';
         }
