--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun Yes or No Page</title>
     <style>
-        /* Add a light blue gradient background for a fresh look */
+        /* Add a light blue to light pink gradient background for a fresh look */
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
@@ -15,7 +15,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(135deg, #c9eaff, #c1e8ff, #b6e2ff, #aadfff);
+            background: linear-gradient(135deg, #c9eaff, #ffcad4);
             background-size: 300% 300%;
             animation: gradientBG 10s ease infinite;
             overflow: hidden;  /* Prevent page scrolling */
